--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-@import "tailwindcss";
+/* @import "tailwindcss"; */
 
+@import "tailwindcss/preflight";
+@tailwind utilities;
 
 #root {
   margin: 0 auto;
