--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-/* @import "tailwindcss/preflight";
+@import "tailwindcss/preflight";
 @import "tailwindcss/utilities";
-@import "tailwindcss"; */
+@import "tailwindcss";
 
 
 #root {
