improve ProductDetails layout and add time for a product pickup

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   margin: 0 auto;
   text-align: center;
 /* background-color: #f3f4f6; */
+/* background-color: #fff; */
 }
 
 /* Ensure the scrollable container doesn't overflow the parent */
